# GenSpark-Work

./: README.md
Project 1/src/: Main.java
Project 1/src/java/: Main.java
Project 1/src/test/: GameResultTest.java
Project 2/src/: Main.java
Project 2/src/java/: Main.java
Project 2/src/tests/: MainTest.java
Project 5/: randomWords.txt
Project 5/src/java/: Game.java  Input.java  Main.java
Project 5/src/tests/: GameTest.java  MainTest.java
Project 5/src/tests/testStrings/: LOWER_STRINGS.txt  NUMERIC_STRINGS.txt  SPECIAL_STRINGS.txt  UNRESTRICTED_STRINGS.txt  UPPER_STRINGS.txt
Project 6/Rust/: .gitignore  Cargo.toml  bkgshdr.wgsl
Project 6/Rust/src/: gui.rs  java_img_handling.rs  java_input_logic.rs  lib.rs  misc_util.rs  tex2d.rs
Project 6/resources/: README_resourceGuide.txt  goblinNames.txt  map.txt  unlikelyCriticalHitMsgs.txt
Project 6/src/java/: Main.java
Project 6/src/java/game/: Game.java  GlobalInventory.java  Map.java  Node.java  Treasure.java
Project 6/src/java/graph/: Graph.java
Project 6/src/java/inventory/: DamageFxItem.java  DefenseItem.java  HealthItem.java  Inventory.java  Item.java  Weapon.java
Project 6/src/java/main/: Main.java
Project 6/src/java/player/: Goblin.java  Human.java  Player.java
Project 6/src/java/utilities/: AdvRandom.java  Input.java
Project 6/src/tests/: GraphTest.java
Project 6/src/tests/utilities/: AdvRandomTest.java
Project 7/resources/: hangman_art.txt
Project 7/src/java/: Main.java
Project 7/src/java/utilities/: AdvRandom.java  Input.java
Project 7/src/test/: MainTest.java
